# dragon-ball-fusion-world

./: .gitignore  README.md  codes.txt
.github/workflows/: release.yml
code_redeemer/: README.md  build_mac.sh  build_windows.bat  main.py  requirements.txt
code_redeemer/src/: detector.py  gui.py  logger.py  redeemer.py  window.py
code_scanner/: Cargo.toml  README.md  build_mac.sh  build_windows.bat  main.py  requirements.txt
code_scanner/scripts/: build_helper_mac.sh  build_helper_windows.ps1
code_scanner/src/: app.rs  camera.rs  config.py  export.rs  gui.py  image_utils.rs  logger.py  main.rs  ocr.rs  scanner.rs  tesseract.rs  vision_bridge.rs
code_scanner/vision_helper/: run_helper_mac.sh  run_helper_windows.bat  vision_helper.py
dbfw_tools/: build_mac.sh  build_windows.bat  installer_windows.iss  main.py  requirements.txt  run_mac.command  run_windows.bat  uninstall_mac.command
dbfw_tools/src/: gui.py  logger.py
dbfw_tools/src/redeemer/: detector.py  redeemer.py
dbfw_tools/src/scanner/: config.py  discord_client.py  gemini_client.py
hello_world/src/: main.rs
